# FactProbe

./: .gitignore  LICENSE  README.md  config.yaml  probe.py  pyproject.toml  run.py  soft_em.py
data_index/: README.md  find_query_in_fm.sh
data_index/dolma-to-fmindex/: download_build_index.sh  v1_7.txt
data_index/dolma-to-fmindex/helpers/: build_fmindex.sh  download_dolma.sh  json_gz_to_text_gz.py
factprobe/: __init__.py  probe.py  prompt.py
factprobe/utils/: __init__.py  analysis.py  preprocess.py  stats.py  wikidata.py
scripts/: analyse_all_experiments.sh  analyse_experiment.py  analyze_experiment.py  latex_format.py
