[tool.poetry]
name = "factprobe"
version = "0.1.0"
description = "Code repository for the paper: Supposedly Equivalent Facts That Aren't? Entity Frequency in Pre-training Induces Asymmetry in LLMs"
authors = ["Anonymous"]
readme = "README.md"
packages = [{include = "factprobe"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
vllm = "^0.7.1"
pandas = "^2.2.3"
numpy = ">=1.26.0,<2.0.0"
click = "^8.0.0"
pydantic = "^2.10.6"
scipy = "^1.13.1"
deeponto = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
